src/components/Cryptos/CoinDetails/style.css
.details-main {
	display: grid;
	grid-template-columns: 1fr;
}

.details-header {
	margin: 1rem 0;
	color: var(--contrast-color);
	font-size: 1.5em;

	display: flex;
	justify-content: center;
}

.details-graph {
	display: none;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.details-section {
	display: flex;
	flex-direction: column;
	align-items: center;
	margin: 3rem 1rem;
	background: transparent;
}

.details-section-header {
	justify-content: center;
	font-size: 1.25em;
	margin: 1rem;
	font-weight: bold;
	color: black;
}

.details-item {
	display: flex;
	width: min(950px, 95%);
	align-items: center;
	justify-content: space-between;

	background: transparent;
	padding-bottom: 1rem;

	font-size: 1em;

	border-bottom: solid 1px rgba(0, 0, 0, 0.3);
	margin-bottom: 0.5rem;
	font-weight: 400;
	color: rgba(0, 0, 0, 0.85);
}

.details-item div {
	font-weight: bold;
	color: black;
}

.details-item a {
	text-decoration: none;
	font-weight: bold;
	color: var(--contrast-color);
	cursor: pointer;
}

.details-description {
	display: flex;
	flex-direction: column;
	align-items: center;
	margin: 0.5rem 1rem;
	background: transparent;
	text-align: left;
}

.details-description p {
	width: 100%;
}

.details-description h3 {
	color: black;
	margin: 1rem 0;
	background: transparent;
	text-align: left;
	width: 100%;
}

.details-description a {
	color: var(--contrast-color);
}

.details-totop {
	text-align: center;
	width: 100%;

	display: flex;
	justify-content: center;
	align-items: center;

	color: var(--contrast-color);
	font-weight: bold;
	margin: 1rem 0;
}

.details-graph-selector {
	width: 90%;
	display: flex;
	justify-content: flex-end;
	padding: 1rem 0;
}

#dropdown {
	color: black;
	font-size: 0.85em;
	padding-left: 0.5rem;
	width: 150px;
	height: 30px;
	background: var(--contrast-color);
	border: solid 1px var(--contrast-color);
}

.details-totop {
	text-align: center;
	padding: 1rem;
	color: var(--contrast-color);
	font-weight: bold;
}

.details-totop span:hover {
	cursor: pointer;
	border-bottom: solid 1px var(--contrast-color);
}

span {
	background: transparent;
}

@media screen and (min-width: 768px) {
	.details-main {
		font-size: 1.2em;
	}
}

@media screen and (min-width: 1025px) {
	.details-graph {
		display: flex;
	}

	.details-description {
		margin: 0.5rem 3rem;
	}
}

